Fix the default address for linux bluetooth mailing list
This patch fixes the default address for linux bluetooth mailing list.

--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ user = bluez.test.bot@gmail.com
 starttls = yes
 
 ; Default address to send
-default-to = bluetooth-next@vger.kenel.org
+default-to = linux-bluetooth@vger.kernel.org
 
 ; List of maintainsers
 maintainers = marcel@holtmann.org,
